Restore z-index: auto for toolbox and sidebar elements. Fixes #411
Revamped sidebar design sets non-auto z-index for toolbox and sidebar
items. We need to restore them to auto for correct (in our perspective)
layering.

--- a/chrome/autohide_bookmarks_and_main_toolbars.css
+++ b/chrome/autohide_bookmarks_and_main_toolbars.css
@@ -19,7 +19,13 @@ See the above repository for updates as well as full license text. */
 :root[chromehidden~="toolbar"] #navigator-toolbox{
   --uc-navbar-height: 0px;
 }
-
+#navigator-toolbox,
+#sidebar-box,
+#sidebar-main,
+#sidebar-splitter,
+#tabbrowser-tabbox{
+  z-index: auto !important;
+}
 :root[sessionrestored] #nav-bar,
 :root[sessionrestored] #PersonalToolbar{
   background-image: linear-gradient(var(--toolbar-bgcolor),var(--toolbar-bgcolor)), var(--lwt-additional-images,var(--toolbar-bgimage))  !important;
